Avoid exposing declarations for kernel variables to userland.

PR:	54528

Former-commit-id: 168718eb3b005e91e827b9a4a054caa5330b86dc