sys/sparc64/include/cache.h
@@ -208,6 +208,12 @@ block|}
 struct|;
 end_struct
 
+begin_ifdef
+ifdef|#
+directive|ifdef
+name|_KERNEL
+end_ifdef
+
 begin_typedef
 typedef|typedef
 name|void
@@ -287,6 +293,11 @@ name|cacheinfo
 name|cache
 decl_stmt|;
 end_decl_stmt
+
+begin_endif
+endif|#
+directive|endif
+end_endif
 
 begin_endif
 endif|#
